fix: typing animation mobile

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ a {
 @keyframes typing {
 0%{width:0;}
 20%{width:0;}
-60%{width: 30ch;}
+60%{width: 30ch}
 100%{width: 30ch;}
 }
 
@@ -605,8 +605,8 @@ a {
     @keyframes typing {
         0%{width:0;}
         20%{width:0;}
-        60%{width: 30ch;}
-        100%{width: 30ch;}
+        60%{width: 35ch;}
+        100%{width: 35ch;}
         
     }
 
